src/tests/syntax_analysis_error/invalid_let_statement/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_let_statement__test_invalid_let_statement_case_7_lexical_analysis.snap
---
source: src/tests/syntax_analysis_error/invalid_let_statement/mod.rs
assertion_line: 23
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "UPPER_CASE_SNAKE_CASE",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 27,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 29,
        },
    },
]
