src/tests/syntax_analysis_error/invalid_let_statement/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_let_statement__test_invalid_let_statement_case_7_syntax_analysis_error.snap
---
source: src/tests/syntax_analysis_error/invalid_let_statement/mod.rs
assertion_line: 28
expression: error
---
Err(
    "Do not know how to parse SemiColon as an expression at line 1, column 29.",
)
