src/tests/syntax_analysis_error/invalid_let_statement/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_let_statement__test_invalid_let_statement_case_8_lexical_analysis.snap
---
source: src/tests/syntax_analysis_error/invalid_let_statement/mod.rs
assertion_line: 23
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "timeout_ms",
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 5,
        },
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: Let,
        position: Position {
            line: 2,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "timeout_ms_copy",
        },
        position: Position {
            line: 2,
            column: 6,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 2,
            column: 21,
        },
    },
]
